# AIApiRadar

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  aiapiradar.db-journal  docker-compose.yml  pyproject.toml  requirements.txt  wrangler.toml  Даня-TODO.md
.github/workflows/: collectors.yml  deploy.yml  reclassify.yml
.kiro/hooks/: warn-webpy-not-deployed.json
.kiro/steering/: architecture.md
aiapiradar/: __init__.py  app_defaults.py  cli.py  collector_meta.py  config.py  db.py  discover.py  enrich.py  logging_conf.py  models.py  notifier.py  runtime.py  scheduler.py  scorer.py  sources.py  watchdog.py  web.py
aiapiradar/collectors/: __init__.py  appstore.py  certstream.py  changelog_rss.py  coupon.py  crtsh.py  directories.py  discord_directory.py  fofa.py  forum_rss.py  github.py  github_lists.py  hackernews.py  huggingface.py  leaks.py  openrouter.py  packages.py  yc.py  (+9 more)
docs/: architecture.md  deploy-cloudflare.md  discovery-sources.md  settings-design.md
frontend/: .gitignore  next.config.ts  package-lock.json  package.json
scripts/: gen_schema.py  gen_worker_constants.py
tests/: conftest.py  factories.py  test_blocklist.py  test_collectors_fetch.py  test_config.py  test_cross_source.py  test_crtsh_circuit.py  test_discovery.py  test_enrich_parse.py  test_fetch.py  test_notifier_group.py  test_phase0.py  test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_phase6.py  test_phase7.py  test_schema_sync.py  test_worker_constants_sync.py
worker/: README.md  package-lock.json  package.json
(+89 files in other folders)
