[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aiapiradar"
version = "0.1.0"
description = "Multi-source monitor for free AI API credit / trial offers"
requires-python = ">=3.10"
dependencies = [
    "SQLAlchemy>=2.0,<3.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
    "APScheduler>=3.10",
    "python-dateutil>=2.9",
    "feedparser>=6.0",
    "websocket-client>=1.7",
    "beautifulsoup4>=4.12",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "jinja2>=3.1",
]

[project.optional-dependencies]
llm = ["openai>=1.30"]
telegram = ["telethon>=1.34"]
dev = ["pytest>=8.0"]

[project.scripts]
aiapiradar = "aiapiradar.cli:main"

[tool.setuptools]
packages = ["aiapiradar", "aiapiradar.core", "aiapiradar.collectors", "aiapiradar.pipeline"]

[tool.setuptools.package-data]
aiapiradar = ["templates/*.html"]
